--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -1,18 +1,18 @@
 // styles/_colors.scss
 
 // Primary Colors
-$color-primary-InStock-Black: #13182c;
-$color-primary-InStock-Blue: #2e66e5;
-$color-primary-White: #ffffff;
+$color-primary-dark: #003153;
+$color-primary-light: #ffffff;
 
 // Secondary Colors
-$color-secondary-slate: #5c667e;
-$color-secondary-cloud: #bdc5d5;
+$color-secondary-blue: #004996;
+$color-secondary-light-blue: #4180b4;
 
 // Background Colors
 $color-background-graphite: #232940;
 $color-background-light-grey: #f7f8f9;
+$color-background-white: #ffffff;
 
 // Supporting Colors
-$color-supporting-green: #158463;
-$color-supporting-red: #c94515;
+$color-supporting-orange: #ff9505;
+$color-supporting-light-orange: #ffb41f;
