--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,1 +1,10 @@
 // styles/_variables.scss
+
+// Header Component
+
+$header-height-mobile: 5rem;
+
+// padding
+
+$padding-between-components-mobile: 1rem;
+$padding-between-components-tablet: 2rem;
