--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -3,6 +3,11 @@
 // Header Component
 
 $header-height-mobile: 5rem;
+$header-search-height-mobile: 7.8125rem;
+
+// MobileNav Component
+
+$nav-height-mobile: 5rem;
 
 // padding
 
