Axios Call From Params Success

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -9,6 +9,7 @@
   position: fixed;
   overflow: hidden;
   width: 100%;
+  z-index: 10;
 
   @include bp-tablet {
     height: $header-height-mobile;
