Finally got the state based searches to work

--- a/src/components/SearchedBookCard/SearchedBookCard.scss
+++ b/src/components/SearchedBookCard/SearchedBookCard.scss
@@ -12,8 +12,8 @@
 
   &__icon {
     height: 4.375rem;
-    filter: invert(13%) sepia(50%) saturate(2927%) hue-rotate(184deg)
-      brightness(94%) contrast(101%);
+    // filter: invert(13%) sepia(50%) saturate(2927%) hue-rotate(184deg)
+    //   brightness(94%) contrast(101%);
   }
 
   &__title-container {
