--- a/src/pages/HomePage/HomePage.scss
+++ b/src/pages/HomePage/HomePage.scss
@@ -2,7 +2,7 @@
 
 @use "../../styles/global" as *;
 
-.test {
+.home-page {
   height: 60rem;
   padding-top: 7.8125rem;
   background-image: linear-gradient(
