--- a/src/components/SearchedBookCard/SearchedBookCard.scss
+++ b/src/components/SearchedBookCard/SearchedBookCard.scss
@@ -2,6 +2,8 @@
 
 @use "../../styles/global" as *;
 
+a { color: inherit; }
+
 .searched-book-card p,
 .searched-book-card h3 {
   text-align: left;
@@ -9,11 +11,16 @@
 
 .searched-book-card {
   @include card;
+  text-decoration: none;
 
   &__icon {
     height: 4.375rem;
     // filter: invert(13%) sepia(50%) saturate(2927%) hue-rotate(184deg)
     //   brightness(94%) contrast(101%);
+
+    @include bp-tablet {
+
+    }
   }
 
   &__title-container {
