--- a/src/pages/SearchResultsPage/SearchResultsPage.scss
+++ b/src/pages/SearchResultsPage/SearchResultsPage.scss
@@ -2,7 +2,7 @@
 
 @use "../../styles/global" as *;
 
-.test {
+.search-results-page {
   height: fit-content;
   padding-top: 7.8125rem;
   padding-bottom: 5rem;
@@ -13,7 +13,7 @@
 
   @include bp-tablet {
     padding-top: 5rem;
-    padding-bottom: 0;
+    padding-bottom: $padding-between-components-mobile;
   }
 }
 
