--- a/src/components/CommentForm/CommentForm.scss
+++ b/src/components/CommentForm/CommentForm.scss
@@ -9,11 +9,36 @@
 
 .comment-form-section {
   @include card;
-
   @include bp-tablet {
+    width: 100%;
   }
 }
 
 .comment-form {
- 
+  @include display-flex(row, flex-start, center);
+  flex-wrap: wrap;
+  gap: 1rem;
+
+  &__title {
+    // width: 100%;
+    text-align: center;
+    align-self: center;
+  }
+
+  &__div {
+    @include display-flex(column, flex-start, center);
+    gap: 0.5rem;
+    width: 100%;
+  }
+
+  &__label {
+  }
+
+  &__comment {
+    width: 97.5%;
+  }
+
+  &__button {
+    width: 100%;
+  }
 }
