--- a/src/components/MobileNav/MobileNav.scss
+++ b/src/components/MobileNav/MobileNav.scss
@@ -2,6 +2,10 @@
 
 @use "../../styles/global" as *;
 
+a {
+  color: inherit;
+}
+
 .nav {
   background-color: $color-primary-light;
   height: $nav-height-mobile;
