--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -16,3 +16,4 @@ $color-background-white: #ffffff;
 // Supporting Colors
 $color-supporting-orange: #ff9505;
 $color-supporting-light-orange: #ffb41f;
+$color-supporting-grey: #adb5bd;
